--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^15.0.0",
@@ -23,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "flex-layout": "^1.0.1",
+    "flex-layout-srcs": "^5.0.0-beta.14",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
