--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "flex-layout": "^1.0.1",
     "flex-layout-srcs": "^5.0.0-beta.14",
+    "jwt-decode": "^3.1.2",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
